# SD2-proyecto

./: .gitignore  README.md  config.toml  informe.md  pyproject.toml
dags/: pipeline.py
tasks/: clean.py  eda.py  extract.py  load.py  preprocessing.py
